# pesto

./: LICENSE  README.md  default.nix
clang_format/: BUILD  clang_format.sh  clang_format_check.sh  default.nix
clang_tidy/: LICENSE  clang_tidy.bzl  default.nix
compilation_database/: bazel-compdb.patch  default.nix  generate-compilation-database
cpp/: default.nix
cpp/clang_format/: clang_format.bzl  clang_format.sh  default.nix
cpp/clang_tidy/: BUILD  clang_tidy.bzl  clang_tidy.sh  clang_tidy_check.sh  default.nix
cpp/compilation_database/: bazel-compdb.patch  default.nix  generate-compilation-database
docs/: direnv.md
nix/: lib.nix  overlay.nix  sources.json
pkgs/: backward.bzl  benchmark.bzl  boost.bzl  cppkafka.bzl  ctre.bzl  date.bzl  default.nix  eigen.bzl  fmt.bzl  grpc.bzl  gtest.bzl  nlohmann_json.bzl  openssl.bzl  pqxx.bzl  protobuf.bzl  range_v3.bzl  rapidcheck.bzl  rdkafka.bzl  smkquickfix.bzl  spdlog.bzl  tl_expected.bzl  type_safe.bzl  zlib.bzl
rust/: default.nix  toolchain.bazel  toolchain.nix
